[tool.poetry]
name = "fyers_token_manager"
version = "0.1.0"
description = ""
authors = ["Krunal Dodiya <kunal.dodiya1@gmail.com>"]
readme = "README.md"
packages = [{include = "fyers_token_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
pyotp = "^2.8.0"
fyers-apiv2 = "^2.0.6"
wheel = "^0.40.0"
twine = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
